--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,9 @@
 .App-link {
   color: #09d3ac;
 }
+.todo {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
