--- a/src/Container/CSS/margin.css
+++ b/src/Container/CSS/margin.css
@@ -56,3 +56,14 @@
   padding: 10px;
   margin: 20px;
 }
+li {
+  display: inline-block;
+  /* background-color: black; */
+  color: white;
+  margin: 20px;
+  float: right;
+}
+.nav {
+  background-color: black;
+  height: 60px;
+}
